@@ -55,6 +55,7 @@ local function makefarcolors (colors_file, guids_file, out_file)
   local collect = {}
   local pat = "^%s*DEFINE_GUID.-([%w_]+).-"..("0[xX](%x+).-"):rep(11)
   local lineno = 0
+  local errmsg
   for line in fp:lines() do
     lineno = lineno + 1
     local t = { line:match(pat) }
@@ -62,15 +63,16 @@ local function makefarcolors (colors_file, guids_file, out_file)
       for k=2,#t do t[k] = tonumber(t[k],16) end
       collect[#collect+1] = ("%s='%08X-%04X-%04X-%02X%02X-%02X%02X%02X%02X%02X%02X'"):format(unpack(t))
     elseif line:match("^%s*DEFINE_GUID") then
-      fp:close()
-      error("GUIDs file: could not process line #"..lineno)
+      errmsg = "GUIDs file: could not process line #"..lineno
+      break
     end
   end
-  assert(#collect >= 83)
-  local guids = table.concat(collect, ",")
   fp:close()
+  assert(not errmsg, errmsg)
+  assert(#collect >= 83, "too few GUIDs collected")
+  local guids = table.concat(collect, ",")
   
-  fp = io.open(out_file, "w")
+  fp = assert(io.open(out_file, "w"))
   fp:write(sOutFile:format(colors, guids))
   fp:close()
 end
