@@ -1,4 +1,8 @@
-﻿shmuel 18.09.2015 13:00:27 +0200 - build 527
+﻿shmuel 18.09.2015 19:42:34 +0200 - build 528
+
+1. Уточнение 526.
+
+shmuel 18.09.2015 13:00:27 +0200 - build 527
 
 1. Уточнение 526.
 
